# HomeNet

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/cmd_chat/: CMakeLists.txt  chat_cmd.c  chat_cmd.h
components/cmd_ieee802154/: ieee802154_cmd.c
components/cmd_led/: CMakeLists.txt  led_cmd.c  led_cmd.h
components/cmd_tcp/: CMakeLists.txt  tcp_cmd.c  tcp_cmd.h
components/cmd_thread/: CMakeLists.txt  esp_ot_config.h  thread_cmd.c  thread_cmd.h
components/cmd_udp/: CMakeLists.txt  udp_cmd.c  udp_cmd.h
main/: CMakeLists.txt  esp_ieee802154_cli.c  homenet.c  idf_component.yml
